Additional stuff loaded in settings. Loading array of json file data now!

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -45,7 +45,8 @@ $colors: (
 
   archers-heading: (base: #5B8DBB, contrast: #f4f4f4 ),
   archers-light-blue: (base: #93b4d2, contrast: #414141 ),
-  archers-faint-blue: (base: #f1f6fb, contrast: #414141 )
+  archers-faint-blue: (base: #f1f6fb, contrast: #414141 ),
+  archers-note: (base: green, contrast: red ),
 
 );
 
