--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -49,6 +49,7 @@ $colors: (
   archers-note: (base: green, contrast: red ),
   archers-help: (base: rgb(207, 207, 207), contrast: red ),
   archers-text: (base: #4a4a4a, contrast: red ),
+  archers-danger: (base: rgb(255, 203, 203), contrast: red ),
 
 );
 
