--- a/src/components/setting-footer/setting-footer.html
+++ b/src/components/setting-footer/setting-footer.html
@@ -5,15 +5,15 @@
 				<button ion-button full clear (click)="GotoPage('general')">General</button>
 			</ion-col>
 			<ion-col>
-				<button ion-button full clear (click)="GotoPage('shooters')">Shooters</button>
+				<button ion-button full clear (click)="GotoPage(Const.LABEL.SHOOTERS)">Shooters</button>
 			</ion-col>
 		</ion-row>
 		<ion-row>
 			<ion-col>
-				<button ion-button full clear (click)="GotoPage('bows')">Bows</button>
+				<button ion-button full clear (click)="GotoPage(Const.LABEL.BOWS)">Bows</button>
 			</ion-col>
 			<ion-col>
-				<button ion-button full clear (click)="GotoPage('rounds')">Rounds</button>
+				<button ion-button full clear (click)="GotoPage(Const.LABEL.ROUNDS)">Rounds</button>
 			</ion-col>
 		</ion-row>
 	</ion-grid>	
