--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -45,7 +45,7 @@ form {
         max-width: 100px !important;
     }
 
-    ion-input, ion-select {
+    ion-input, ion-select, ion-textarea {
         background-color: #ececec;
         border: 1px solid #ececec;
         border-radius: 8px;
