--- a/src/pages/settings/menu/general/general.scss
+++ b/src/pages/settings/menu/general/general.scss
@@ -1,3 +1,12 @@
 page-general {
 
+    ion-label {
+        -webkit-flex: 0 0 200px !important;
+        -ms-flex: 0 0 200px !important;
+        flex: 0 0 200px !important;
+        width: 200px !important;
+        min-width: 200px !important;
+        max-width: 200px !important;
+    }
+
 }
