--- a/src/pages/score/score-card/score-card.scss
+++ b/src/pages/score/score-card/score-card.scss
@@ -1,3 +1,84 @@
 page-score-card {
 
+    .card {
+        padding-top:10px !important;
+        padding-bottom:10px !important;
+    }
+
+    ion-item.tbl-heading {
+    }
+
+    ion-item.tbl-scores {
+    }
+    
+    ion-item.end-total {
+        margin-top: 10px !important;
+        ion-col {
+            border: 1px solid transparent;
+        }
+    }
+
+    ion-item.end-stats {
+        margin-top: 10px !important;
+        ion-col {
+            background-color: transparent;
+            margin-top: 0px !important;
+        }
+
+    }
+    
+    ion-item {
+        padding-left: 10px !important;
+        min-height: 0px !important;
+        font-size: 90% !important;
+    }
+
+    ion-label {
+        margin: 0px !important;
+    }
+
+    ion-grid {
+        padding: 0px !important;
+    }
+
+    ion-col {
+        text-align: center;
+        margin: 3px !important;
+    }
+
+    .bgcolor-heading {
+        background-color: #dbdada;
+    }
+    .bgcolor-et {
+        background-color: #9e9e9e;
+    }
+    .bgcolor-rt {
+        background-color: #5e5e5e;
+    }
+    .bgcolor-none {
+        background-color: transparent !important;
+    }
+
+    .bt {
+        border-top: 1px solid #c4c4c4;
+    }
+    .br {
+        border-right: 1px solid #c4c4c4;
+    }
+    .bb {
+        border-bottom: 1px solid #c4c4c4;
+    }
+    .bl {
+        border-left: 1px solid #c4c4c4;
+    }
+    .bdr {
+        border: 1px solid #c4c4c4 !important;
+    }
+
+
+
+    .tr {
+        text-align: right;
+    }
+
 }
