--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,10 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
+h2 {
+    font-weight: bold !important;
+}
+
 ion-title {
     position: absolute;
     left: 50%;
