--- a/src/components/field-date/field-date.html
+++ b/src/components/field-date/field-date.html
@@ -1,4 +1,4 @@
 <ion-item>
     <ion-label fixed>{{ label }}</ion-label>
-    <ion-datetime [ngModel]="value" displayFormat="DDDD D MMM YYYY" readonly></ion-datetime>
+    <ion-datetime [ngModel]="value" displayFormat="D MMM YYYY" readonly></ion-datetime>
 </ion-item>
