--- a/src/pages/settings/menu/rounds/rounds.scss
+++ b/src/pages/settings/menu/rounds/rounds.scss
@@ -1,3 +1,7 @@
 page-rounds {
 
+    .input-wrapper ion-label {
+        margin-top: 0px !important;
+        margin-bottom: 0px !important;
+    }
 }
