Added shooter image

--- a/src/components/shooter-scorecard/shooter-scorecard.scss
+++ b/src/components/shooter-scorecard/shooter-scorecard.scss
@@ -1,8 +1,8 @@
 shooter-scorecard {
     h2 {
         small {
-            display: inline-block;
-            width: 40px !important;
+            // display: inline-block;
+            // width: 40px !important;
             color: color( $colors, archers-heading );
         }
     }
