--- a/src/components/shooter-scorecard/shooter-scorecard.html
+++ b/src/components/shooter-scorecard/shooter-scorecard.html
@@ -1,13 +1,14 @@
 <h2>
   <small>{{ placeMe(index+1) }}</small>
-  {{ shooter.name }}
+  <p>{{ shooter.name }}</p>
   <span float-right>{{ shooter.score.total_rt }}</span>
 </h2>
 <p *ngIf="shooter.score.isComplete">
-  <small style="margin-left:40px;"></small>
   <span class="stat">Hits:</span><strong>{{ shooter.score?.statHits }}</strong>, 
-  <span class="stat">Avg:</span><strong>{{ shooter.score?.statAvg }}</strong>, 
-  <span class="stat">Xs</span><strong>{{ shooter.score?.statXs }}</strong>, 
+  <span class="stat">Avg:</span><strong>{{ shooter.score?.statAvg }}</strong>
+</p>
+<p *ngIf="shooter.score.isComplete">
+  <span class="stat">Xs</span><strong>{{ shooter.score?.statXs }}</strong>
   <span class="stat">10s</span><strong>{{ shooter.score?.stat10s }}</strong>, 
   <span class="stat">9s</span><strong>{{ shooter.score?.stat9s }}</strong>, 
   <span class="stat">Ms</span><strong>{{ shooter.score?.statMs }}</strong>
