--- a/src/components/shooter/shooter.html
+++ b/src/components/shooter/shooter.html
@@ -1,2 +1,3 @@
 <h2>{{ shooter?.initials }} : {{ shooter?.name }}</h2>
-<p>Gender: {{ shooter?.gender || 'n/a' }}, Age: {{ shooter?.age || 'n/a' }}, Bows: {{ shooter?.bows.length }}</p>
+<p>Gender: {{ shooter?.gender || 'n/a' }}, Age: {{ shooter?.age || 'n/a' }}</p>
+<p>Bows: {{ shooter?.bows.length }}</p>
