--- a/src/components/face/face.html
+++ b/src/components/face/face.html
@@ -1,4 +1,4 @@
 <ion-thumbnail item-start>
-    <img *ngIf="shooter?.image.default==null" src="assets/imgs/no-user-image.gif" />
-    <img *ngIf="shooter?.image.default!=null" src="{{ shooter?.image.default }}">
+    <img *ngIf="shooter?.image==null" src="assets/imgs/no-user-image.gif" />
+    <img *ngIf="shooter?.image!=null" src="{{ shooter?.image }}">
 </ion-thumbnail>
